--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         });
 
         // Adicionar camada de uso do solo
-        var usoDoSolo = L.imageOverlay('C:/Users/Carla/Desktop/Cursos/QGIS 2025/uso do solo Vtoria.tif', [
+        var usoDoSolo = L.imageOverlay('./uso_solo_vitoria.png', [
             [-20.2976 - 0.2, -40.2958 - 0.2],  // [south, west]
             [-20.2976 + 0.2, -40.2958 + 0.2]   // [north, east]
         ], {
